; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_devices.c_Devices_B_Open.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_devices.c_Devices_B_Open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64, i32 }

@devbug = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [8 x i8] c"B: OPEN\00", align 1
@Devices_ICAX1Z = common dso_local global i32 0, align 4
@CPU_regY = common dso_local global i32 0, align 4
@CPU_SetN = common dso_local global i32 0, align 4
@dev_b_status = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@FALSE = common dso_local global i32 0, align 4
@CPU_ClrN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @Devices_B_Open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Devices_B_Open() #0 {
  %1 = load i64, i64* @devbug, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 @Log_print(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  br label %5

5:                                                ; preds = %3, %0
  %6 = load i32, i32* @Devices_ICAX1Z, align 4
  %7 = call i32 @MEMORY_dGetByte(i32 %6)
  %8 = icmp ne i32 %7, 8
  br i1 %8, label %9, label %11

9:                                                ; preds = %5
  store i32 163, i32* @CPU_regY, align 4
  %10 = load i32, i32* @CPU_SetN, align 4
  br label %16

11:                                               ; preds = %5
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @dev_b_status, i32 0, i32 2), align 8
  %13 = call i32 @memset(i32 %12, i32 0, i32 4)
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @dev_b_status, i32 0, i32 1), align 8
  %14 = load i32, i32* @FALSE, align 4
  store i32 %14, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @dev_b_status, i32 0, i32 0), align 8
  store i32 1, i32* @CPU_regY, align 4
  %15 = load i32, i32* @CPU_ClrN, align 4
  br label %16

16:                                               ; preds = %11, %9
  ret void
}

declare dso_local i32 @Log_print(i8*) #1

declare dso_local i32 @MEMORY_dGetByte(i32) #1

declare dso_local i32 @memset(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
